--- a/templates/games/ai_learning.html
+++ b/templates/games/ai_learning.html
@@ -167,11 +167,11 @@
                         </div>
                     </div>
                     <div class="flex flex-col gap-3">
-                        <a href="{% url 'robotic_buddy:emotion_game' %}" class="bg-orange-600 text-white py-3 px-4 rounded-lg hover:bg-orange-700 transition-colors text-center font-medium">
-                            Play Now
+                        <a href="/games/ai-learning/" class="bg-orange-600 text-white py-3 px-4 rounded-lg hover:bg-orange-700 transition-colors text-center font-medium">
+                            Learn More
                         </a>
                         <a href="{% url 'robotic_buddy:emotion_game' %}" class="border border-orange-600 text-orange-600 py-3 px-4 rounded-lg hover:bg-orange-50 transition-colors text-center font-medium">
-                            Learn More
+                            Play Now
                         </a>
                     </div>
                 </div>
